tests/specs/ecosystem/sunney/requests/1_0_0.test
sunney/requests/1.0.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:148:14
    | 
148 |   public get baseUrl() {
    |              ^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:156:10
    | 
156 |   public create(opts?: RequestlyOptions | string) {
    |          ^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:160:14
    | 
160 |   public get params() {
    |              ^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:169:10
    | 
169 |     set: (key: string, value: string) => {
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
170 |       this._headers[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
171 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:172:10
    | 
172 |     get: (key: string) => {
    |          ^^^^^^^^^^^^^^^^^^
173 |       return this._headers[key];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
174 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:175:13
    | 
175 |     getAll: () => {
    |             ^^^^^^^
176 |       return this._headers;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
177 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:178:13
    | 
178 |     remove: (key: string) => {
    |             ^^^^^^^^^^^^^^^^^^
179 |       delete this._headers[key];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
180 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:181:13
    | 
181 |     update: (headers: Record<string, string>) => {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
182 |       this._headers = {
    | ^^^^^^^^^^^^^^^^^^^^^^^
183 |         ...headers,
    | ^^^^^^^^^^^^^^^^^^^
184 |         ...this._headers,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
185 |       };
    | ^^^^^^^^
186 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:190:10
    | 
190 |     set: (key: string, value: string) => {
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
191 |       this._cookies[key] = value;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
192 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:193:10
    | 
193 |     get: (key: string) => {
    |          ^^^^^^^^^^^^^^^^^^
194 |       return this._cookies[key];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
195 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:196:13
    | 
196 |     getAll: () => {
    |             ^^^^^^^
197 |       return this._cookies;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
198 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:199:13
    | 
199 |     remove: (key: string) => {
    |             ^^^^^^^^^^^^^^^^^^
200 |       delete this._cookies[key];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
201 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:202:13
    | 
202 |     update: (cookies: Record<string, string>) => {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
203 |       this._cookies = {
    | ^^^^^^^^^^^^^^^^^^^^^^^
204 |         ...cookies,
    | ^^^^^^^^^^^^^^^^^^^
205 |         ...this._cookies,
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
206 |       };
    | ^^^^^^^^
207 |     },
    | ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:208:15
    | 
208 |     toString: () => utils.stringifyCookies(this.cookies.getAll()),
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:211:10
    | 
211 |   public get<T>(url: string, options?: Omit<RequestOptions, "body">) {
    |          ^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:215:10
    | 
215 |   public post<T>(url: string, options?: RequestOptions) {
    |          ^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:219:10
    | 
219 |   public put<T>(url: string, options?: RequestOptions) {
    |          ^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:223:10
    | 
223 |   public delete<T>(url: string, options?: RequestOptions) {
    |          ^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/index.ts:227:10
    | 
227 |   public patch<T>(url: string, options?: RequestOptions) {
    |          ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/index.ts:242:14
    | 
242 | export const requestly = new Requestly();
    |              ^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


